<resources>
    <string name="app_name">Gasto Viagem</string>
    <string name="distancia">Distância</string>
    <string name="total_de_quilometros">Total de quilometros</string>
    <string name="preco">Preço</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="kms_por_litro">KMs por litro</string>
    <string name="seu_gasto_total">Seu gasto total</string>
    <string name="rs">R$ 0</string>
    <string name="calcular">Calcular</string>
</resources>