<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/distancia"
        android:inputType="numberDecimal"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_de_quilometros"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/editPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/preco"
        android:inputType="numberDecimal"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preco_por_litro"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/editAutonomy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/autonomy"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kms_por_litro"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:text="@string/seu_gasto_total"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/textTotalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rs"
        android:layout_marginTop="16dp"
        android:textSize="40sp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:padding="20dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:text="@string/calcular" />

</LinearLayout>